ising/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ising
  labels:
    app: ising
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ising
  template:
    metadata:
      labels:
        app: ising
    spec:
      containers:
      - name: ising
        image: registry.nfsmith.ca/ising:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry
