ising/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ising
  labels:
    app: ising
spec:
  type: ClusterIP
  selector:
    app: ising
  ports:
  - name: ising
    port: 8080
    protocol: TCP
