ising/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ising
spec:
  tls:
  - hosts:
    - ising.nfsmith.ca
    secretName: tls-certs
  rules:
  - host: ising.nfsmith.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: ising
          servicePort: 8080
